Style Layout with Flexbox

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,71 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/****** base header - footer styles ******/
+header,
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.header-divider {
+
+}
+
+header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+/******Mobile Styles - Homepage******/
+.hero-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+aside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.features,
+.features-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.reviews {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+/******FOOTER******/
+.footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+
 
 /* ==========================================================================
    Helper classes
@@ -260,4 +325,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
