--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,14 @@ textarea {
    Author's custom styles
    ========================================================================== */
 /****** base header - footer styles ******/
+html {
+   font-size: 16px;
+}
+
+body {
+    font-size: 1em;
+}
+
 header,
 footer {
     display: flex;
@@ -102,15 +110,36 @@ header .content-wrapper {
     flex-flow: row wrap;
 }
 
-.header-divider {
+header .content-wrapper img {
+    width: 60%;
+    font-size:2.25em;
+    text-align: center;
+    margin: 15px 70px 15px 65px;
+}
 
+.header-divider {
+    width:100%;
+    border:1px solid #527158;
 }
 
 header nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+    width: 60%;
+    margin: 15px 0;
+}
+
+header nav ul {
+    width: 80%;
+}
+nav ul li {
+    display: inline-flex;
+    font-size: 1.125em;
+    text-decoration: none;
+}
+
+nav ul li a {
+    justify-content: space-between;
+    width:80px;
+    text-decoration: none;
 }
 
 /******Mobile Styles - Homepage******/
@@ -118,6 +147,16 @@ header nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 15px;
+}
+
+.content-wrapper h1 {
+    font-size: 2.25em;
+    line-height: normal;
+}
+
+.content-wrapper img {
+    width: 90%;
 }
 
 aside {
@@ -125,29 +164,58 @@ aside {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 15px;
 }
 
-.features,
-.features-items {
+input {
+    width: 90%;
+    text-align: center;
+    font-size: 1.125em;
+}
+
+.features
+.content-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
 }
 
-.reviews {
+.content-wrapper h2 {
+    margin: 15px;
+    font-size: 1.875em;
+    width: 90%;
+    line-height: normal;
+}
+
+.content-wrapper h3 {
+    font-size: 1.125em;
+    width: 90%
+}
+
+.content-wrapper p {
+    margin: 15px;
+}
+
+article {
+    width: 60%;
+    margin: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    text-align: center;
 }
 
 /******FOOTER******/
-.footer-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+footer .content-wrapper {
+    width: 55%;
+    margin: 50px 0;
+    text-align: center;
+}
+
+.copyright p {
+    margin: 0;
 }
 
 
