--- a/css/main.css
+++ b/css/main.css
@@ -218,6 +218,43 @@ footer .content-wrapper {
     margin: 0;
 }
 
+/*****FAQ PAGE*****/
+
+.mission {
+    width: 100%;
+    justify-content: center;
+}
+
+.mission-content {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.mission-content h2 {
+    font-size: 1.875em;
+    width: 90%;
+    line-height: normal;
+    margin:40px 20px 40px 20px;
+}
+
+.mission-content h3 {
+    margin:10px 20px 0px 20px;
+    width:75%;
+}
+
+.mission-content p {
+    margin: 10px 20px 0px 20px;
+}
+
+/*****ABOUT PAGE*****/
+.about-content-wrapper {
+    width: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 45px 20px 50px 20px;
+}
+
 
 
 /* ==========================================================================
@@ -308,15 +345,118 @@ footer .content-wrapper {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width:768px) {
+  /*Tablet Styles Here*/
+
+  header .content-wrapper {
+    width:100%;
+    padding: 25px 0 25px 0;
+    justify-content: space-between;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  header .content-wrapper img {
+    width: 30%;
+  }
+
+  header nav {
+    width: 60%;
+    margin-left: 480px;
+    justify-content: center;
+    align-content: space-between;
+    position: absolute;
+  }
+
+  header nav ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:40%;
+  }
+
+  header nav ul li {
+    margin-right:30px;
+  }
+
+/****MAIN SECTION*****/
+  .hero-area {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 90px 140px 400px 40px;
+    margin: auto;
+  }
+
+  aside .content-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+
+  .features
+  .content-wrapper {
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
+  .features article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
+  .reviews
+  .content-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+
+/*****FOOTER*****/
+  .footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  article .feature-items {
+    flex-basis: 260px;
+  }
+
+  article .features-item-description {
+    flex-basis: 260px;
+  }
+
+/****ABOUT PAGE*****/
+  .mission-content {
+    align-items: center;
+    font-size: 1.35em;
+    justify-content: center;
+    padding-left: 60px;
+  }
+
+  .mission-content p {
+      width:
+  }
+
+  .contact-section .content-wrapper h2 {
+      width:
+  }
+
+  .contact-content {
+      display:
+      justify-content:
+      align-items:
+  }
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+@media only screen and (min-width:1200px) {
+  /*Desktop Styles Here*/
 }
 
 /* ==========================================================================
