--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ main .hero-area {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../img/header-bg1.jpg);
+    background-image: url(../img/header-background.jpg);
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
@@ -225,8 +225,8 @@ main .hero-area {
 
 .content-wrapper h1 {
     font-size: 2.25em;
-    line-height: normal;
-    width: 80%;
+    line-height: 1.25em;
+    width: 85%;
     margin: 1.25rem;
     overflow: hidden;
     position: relative;
@@ -283,6 +283,7 @@ input[type=button] {
     font-size: 1.875em;
     margin-left: 8%;
     padding: 50px 0 50px 0;
+    line-height: 1.25em;
 }
 
 .feature-items {
@@ -305,7 +306,7 @@ article {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    padding: 30px 0 30px 0;
+    padding-top: 1.875em;
 }
 
 article i {
@@ -330,9 +331,9 @@ article i {
 
 .reviews .content-wrapper h2 {
     font-size: 1.875em;
-    line-height: normal;
-    margin: 1.25em;
-    width: 80%;
+    line-height: 1.25em;
+    margin: 40px 0 0 20px;
+    width: 85%;
 }
 
 .reviews article img {
@@ -344,6 +345,7 @@ article i {
     width: 85%;
     margin: 1.25em;
     justify-content: flex-start;
+    background-color: #2a423a;
 }
 
 .mission h3 {
@@ -401,6 +403,7 @@ address {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #527158;
 }
 
 .mission-content {
@@ -417,15 +420,20 @@ address {
 /*****Map Figure here*****/
 .map {
     width: 100%;
-    height: 450px;
+    height:450px;
 }
 
 /*****Contact Section on About Page*****/
-.content-wrapper {
+.contact-section {
+    background-color: #2a423a;
+}
+
+.contact-section .content-wrapper {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-flow: row wrap;
+    padding-bottom: 3.125em;
 }
 
 .content-wrapper h2 {
@@ -433,6 +441,10 @@ address {
     font-size: 1.875em;
     margin: 50px 30px 10px 20px;
     line-height:normal;
+}
+
+.contact {
+    padding: 30px 0 30px 0;
 }
 
 .contact-content h3 {
@@ -464,11 +476,14 @@ address {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #527158;
+    padding-bottom: 2.5em;
 }
 
 .faq .content-wrapper h2 {
     width: 80%;
     font-size: 1.875em;
+    margin-left: 0;
 }
 
 .faq-content {
@@ -585,7 +600,7 @@ address {
     margin-left: auto;
     width: 60%;
     flex-flow: row;
-    padding-left: 3.75em;
+    padding-left: 3em;
   }
 
   header nav {
